--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -6,7 +6,7 @@
     <string name="action_settings">Settings</string>
     
      <!-- web service -->
-    <string name="web_service_url">http//localhost/geolocation</string>
+    <string name="web_service_url">http://hoojook.com/api/webservice/geofence</string>
     
     <!-- frequency in milliseconds -->
     <integer name="call_frequency">1000</integer>
